// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModalBg > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-modal-bg"
  >
    Content within modal
  </div>
</DocumentFragment>
`;

exports[`ModalBody > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-modal-bg"
  >
    Content within modal
  </div>
</DocumentFragment>
`;

exports[`ModalContainer > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-modal"
  >
    Content within modal
  </div>
</DocumentFragment>
`;

exports[`ModalHeader > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-modal-header"
  >
    Content within modal
  </div>
</DocumentFragment>
`;
